src/test/deca/syntax/valid/test_decl_var.deca
// Description:
//    Programme minimaliste utilisant une déclaration de variable.
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 01/01/2022

{
        int x;
}