src/test/deca/syntax/invalid/SansObjet/Inst9-Return-Init.deca
// Description:
//    Return variable declaration.
//
// Results:
//    12:19 no viable alternative at input 'x'
//
// Historique:
//    cree le 08/01/2022

{
        return int x;
}
